plugins {
    id 'java'
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'

    implementation "com.badlogicgames.gdx:gdx:1.13.1"
    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:1.13.1"
    runtimeOnly "com.badlogicgames.gdx:gdx-platform:1.13.1:natives-desktop"
    implementation "com.badlogicgames.gdx:gdx-freetype:1.13.1"
    implementation "com.badlogicgames.gdx:gdx-freetype-platform:1.13.1:natives-desktop"

	implementation "org.hibernate:hibernate-core:6.2.1.Final"
	implementation "org.hibernate:hibernate-community-dialects:6.6.4.Final"
	implementation "org.xerial:sqlite-jdbc:3.47.2.0"
	implementation "jakarta.persistence:jakarta.persistence-api:3.2.0"

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
}

group = 'org.bachelorprojekt'
version = '0.1.0'
description = 'game'

// Verwende eine modernere Java-Version (Java 17 wird empfohlen)
java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

run {
    if (System.getProperty("os.name").toLowerCase().contains("mac")) {
        jvmArgs = ["-XstartOnFirstThread"]
    }
}

application {
    // Setze die Hauptklasse für die Anwendung
    mainClass = 'org.bachelorprojekt.Main'
}

// UTF-8 für die Java-Compiler-Einstellungen
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

// JUnit konfigurieren
tasks.withType(Test) {
    useJUnitPlatform()
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}
